# gmat_zalo_bot

./: Cargo.toml  README.md  debug_question.html
.github/workflows/: daily-questions.yml  gmat-bot.yml
src/: lib.rs  main.rs
