[package]
name = "gmat_zalo_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full", "signal"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
tempfile = "3.0"
